--- a/bahmnicore-omod/pom.xml
+++ b/bahmnicore-omod/pom.xml
@@ -20,6 +20,7 @@
         <gem.home>${basedir}/.rubygems</gem.home>
         <gem.path>${basedir}/.rubygems</gem.path>
         <uiframeworkVersion>3.3.1</uiframeworkVersion>
+        <bedManagementVersion>5.5-SNAPSHOT</bedManagementVersion>
     </properties>
 
     <dependencies>
@@ -252,6 +253,11 @@
             <artifactId>bacteriology-api</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>bedmanagement-api</artifactId>
+            <version>${bedManagementVersion}</version>
         </dependency>
     </dependencies>
 
