Hemanth | #1157 | added dependency on bed management module

--- a/bahmnicore-omod/pom.xml
+++ b/bahmnicore-omod/pom.xml
@@ -258,6 +258,7 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>bedmanagement-api</artifactId>
             <version>${bedManagementVersion}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
