--- a/bahmni-emr-api/pom.xml
+++ b/bahmni-emr-api/pom.xml
@@ -85,7 +85,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -100,25 +99,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${springVersion}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${springVersion}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test-mvc</artifactId>
-            <version>1.0.0.M1</version>
-            <scope>test</scope>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>appframework-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openmrs.module</groupId>
-            <artifactId>appframework-api</artifactId>
+            <artifactId>serialization.xstream-api-2.0</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openmrs.module</groupId>
@@ -126,11 +112,11 @@
         </dependency>
         <dependency>
             <groupId>org.openmrs.module</groupId>
-            <artifactId>calculation-api</artifactId>
+            <artifactId>reportingcompatibility-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openmrs.module</groupId>
-            <artifactId>serialization.xstream-api</artifactId>
+            <artifactId>calculation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
