--- a/bahmni-dataintegrity-omod/pom.xml
+++ b/bahmni-dataintegrity-omod/pom.xml
@@ -9,7 +9,7 @@
         <artifactId>bahmni</artifactId>
         <version>0.83-SNAPSHOT</version>
     </parent>
-    <artifactId>bahmni-datantegrity-omod</artifactId>
+    <artifactId>bahmni-dataintegrity-omod</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Bahmni Data Integrity OMOD</name>
@@ -74,6 +74,11 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>bahmni-dataintegrity-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.openmrs.api</groupId>
             <artifactId>openmrs-api</artifactId>
