--- a/bahmni-dataintegrity-api/pom.xml
+++ b/bahmni-dataintegrity-api/pom.xml
@@ -6,7 +6,7 @@
 
     <name>dataintegrity api</name>
     <packaging>jar</packaging>
-    <groupId>org.openmrs.module</groupId>
+    <groupId>org.bahmni.module</groupId>
     <artifactId>bahmni-dataintegrity-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
