--- a/bahmni-dataintegrity-api/pom.xml
+++ b/bahmni-dataintegrity-api/pom.xml
@@ -4,11 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>dataintegrity api</name>
-    <packaging>jar</packaging>
+    <parent>
+        <groupId>org.bahmni.module</groupId>
+        <artifactId>bahmni</artifactId>
+        <version>0.83-SNAPSHOT</version>
+    </parent>
     <groupId>org.bahmni.module</groupId>
     <artifactId>bahmni-dataintegrity-api</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
+    <name>Bahmni Data Integrity API</name>
 
     <dependencies>
         <dependency>
