--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -23,7 +23,7 @@
             <artifactId>opencsv</artifactId>
             <version>2.0</version>
         </dependency>
-        <dependency
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
